# s3-remove-versioned-objs

./: .gitignore  Cargo.toml  LICENSE
config/: log4rs.yaml
src/: errors.rs  main.rs  object_collector.rs
