[package]
name = "s3-remove-versioned-objs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.0"
aws-sdk-s3 = "0.25.1"
byte-unit = "4"
clap = { version = "4.2.1", features = ["derive"] }
crossbeam = "0.8.2"
csv = "1.2"
log = "0.4"
log4rs = "1.2.0"
logging_timer = "1.1.0"
tokio = { version = "1", features = ["full"] }