[package]
name = "s3-remove-versioned-objs"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1"
aws-sdk-s3 = "1"
byte-unit = "5"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
crossbeam = "0.8"
csv = "1.3"
log = "0.4"
log4rs = "1.2.0"
logging_timer = "1.1.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }